--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -1,34 +1,37 @@
-*{
-    padding:0;
-    margin:0;
-    font-family: Poppins;
-  }
-
-.card{
-    margin:1rem;
-    min-height:25vh;
-    border-radius:8px;
-    border: none;
-  
+* {
+  padding: 0;
+  margin: 0;
+  font-family: Poppins;
 }
 
-.home-page{
-    background-color: rgb(238, 235, 245);
+.card-row {
+  margin-top: 8rem;
+  margin-bottom: 5rem;
+}
+
+.card {
+  min-height: 25vh;
+  border-radius: 8px;
+  border: none;
+}
+
+.home-page {
+  background-color: rgb(238, 235, 245);
+  padding: 1rem;
 }
 
 /* removes the text decoration in router link */
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
-.card-title{
-    color: rgb(39, 39, 56);
-    font-size:1rem;
-    
+.card-title {
+  color: rgb(39, 39, 56);
+  font-size: 1rem;
 }
 
-.card-text{
-    font-weight:400;
-    font-size:13px;
-    }
+.card-text {
+  font-weight: 400;
+  font-size: 13px;
+}
