--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -3,21 +3,57 @@
   margin: 0;
   font-family: Poppins;
 }
-
-.reminder,.period,.titles{
-    min-height:16vh;
-    border-radius: 2px;
-    padding-top: 2rem;
+P {
+  margin: 0;
+  padding: 0;
+}
+.timtitl {
+  color: rgb(67, 67, 116);
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+.hri {
+  color: rgb(49, 182, 131);
+  font-weight: 600;
+  font-size: 2.3rem;
+  letter-spacing: -1px;
+}
+.dti {
+  font-size: 1rem;
+  font-weight: 200rem;
+  letter-spacing: -1px;
+  color: rgb(48, 172, 99);
+}
+.reminder {
+}
+.rder {
+  font-weight: 500;
+  color: rgb(42, 39, 48);
+}
+.ress {
+  color: red;
 }
 
-.reminder{
-    background-color: blue;
+.reminder,
+.period,
+.titles {
+  min-height: 16vh;
+  border-radius: 2px;
+  padding-top: 2rem;
+  margin-top: 3rem;
 }
-.period{
-    background-color:red;
+span {
+  color: rgb(20, 182, 106);
+  font-weight: 700;
 }
-.titles{
-    background-color:purple;
+.titl {
+  font-weight: 600;
+  font-size: 1.8rem;
+  /* letter-spacing: -1px;   */
+}
+
+.titles {
+  /* background-color:purple; */
 }
 
 .card-row {
@@ -26,7 +62,7 @@
 }
 
 .card {
-  padding-top:2rem;
+  padding-top: 2rem;
   min-height: 25vh;
   border-radius: 8px;
   border: none;
@@ -35,7 +71,7 @@
 .home-page {
   background-color: rgb(246, 244, 250);
   padding: 1rem;
-  min-height:95vh;
+  min-height: 95vh;
 }
 
 /* removes the text decoration in router link */
@@ -52,8 +88,4 @@ a {
 .card-text {
   font-weight: 400;
   font-size: 13px;
-}
-
-.firs{
-    background-color:rgb(16, 114, 114);
 }
