--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -19,10 +19,10 @@ P {
   letter-spacing: -1px;
 }
 .dti {
-  font-size: 1rem;
-  font-weight: 200rem;
+  font-size: 2rem;
+  font-weight: 200;
   letter-spacing: -1px;
-  color: rgb(48, 172, 99);
+  color: rgb(11, 170, 77);
 }
 .reminder {
 }
