--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -3,6 +3,7 @@
   margin: 0;
   font-family: Poppins;
 }
+
 P {
   margin: 0;
   padding: 0;
@@ -57,7 +58,7 @@ span {
 }
 
 .card-row {
-  margin-top: 8rem;
+  margin-top:5rem;
   margin-bottom: 5rem;
 }
 
@@ -66,6 +67,11 @@ span {
   min-height: 25vh;
   border-radius: 8px;
   border: none;
+  margin-top:0.5rem;
+}
+
+.card:hover{
+  border: solid 1px rgb(224, 232, 235);
 }
 
 .home-page {
