--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -8,6 +8,7 @@ P {
   margin: 0;
   padding: 0;
 }
+
 .timtitl {
   color: rgb(67, 67, 116);
   font-weight: 600;
@@ -20,10 +21,10 @@ P {
   letter-spacing: -1px;
 }
 .dti {
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: 200;
   letter-spacing: -1px;
-  color: rgb(11, 170, 77);
+  color: rgb(19, 187, 89);
 }
 .reminder {
 }
@@ -32,7 +33,10 @@ P {
   color: rgb(42, 39, 48);
 }
 .ress {
-  color: red;
+  color: rgb(119, 77, 201);
+  border:  solid 1px rgb(196, 209, 209);
+  border-radius:5rem;
+  padding:0.5rem;
 }
 
 .reminder,
@@ -44,7 +48,7 @@ P {
   margin-top: 3rem;
 }
 span {
-  color: rgb(20, 182, 106);
+  color: rgb(29, 201, 121);
   font-weight: 700;
 }
 .titl {
@@ -71,7 +75,7 @@ span {
 }
 
 .card:hover{
-  border: solid 1px rgb(224, 232, 235);
+  border: solid 1px rgb(222, 237, 243);
 }
 
 .home-page {
