--- a/src/assets/css/tasks.css
+++ b/src/assets/css/tasks.css
@@ -3,3 +3,17 @@
     margin: 0;
     font-family: Poppins;
 }
+
+.tsk01{
+    min-height:4rem;
+    border: solid 1px rgb(223, 223, 223);
+    border-radius:0.4rem;
+    padding: 1.2rem;
+    font-size:12px;
+}
+
+.tsk01 h4{
+    font-size:13px;
+    color: rgb(10, 70, 85);
+    font-weight:600;
+}
