--- a/src/assets/css/tasks.css
+++ b/src/assets/css/tasks.css
@@ -3,6 +3,15 @@
     margin: 0;
     font-family: Poppins;
 }
+.tihead{
+    color: rgb(15, 165, 132);
+    text-align:left;
+    /* font-size:1.3rem; */
+    letter-spacing: -0.5px;
+    font-weight:700;
+    padding:3rem;
+    padding-left: 11rem;
+}
 
 .tsk01{
     min-height:4rem;
