--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -5,11 +5,11 @@
 }
 
 .tudu-logo{
-    font-size:1rem;
+    font-size:1.1rem;
     font-weight:800;
     border: 1px rgb(230, 222, 222) solid;
-    border-radius:3rem;
-    color: rgb(26, 187, 199);
+    border-radius:6px;
+    color: rgb(22, 165, 165);
     padding:0.5rem;
     padding-left:1.5rem;
     padding-right:1.5rem;
