--- a/src/assets/css/tasks.css
+++ b/src/assets/css/tasks.css
@@ -6,7 +6,7 @@
 .tihead{
     color: rgb(15, 165, 132);
     text-align:left;
-    /* font-size:1.3rem; */
+    font-size:1.3rem;
     letter-spacing: -0.5px;
     font-weight:700;
     padding:3rem;
