--- a/src/assets/css/tasks.css
+++ b/src/assets/css/tasks.css
@@ -15,10 +15,12 @@
 
 .tsk01{
     min-height:4rem;
-    border: solid 1px rgb(233, 232, 232);
+    border: solid 1px rgb(236, 238, 240);
     border-radius:0.4rem;
     padding: 1.2rem;
     font-size:12px;
+    margin-top: 0.5rem;
+    background-color:rgb(250, 253, 255);
 }
 
 .tsk01 h4{
