--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -51,7 +51,7 @@ P {
   font-weight: 700;
 }
 .titl {
-  font-weight: 600;
+  font-weight:700;
   font-size: 1.15rem;
   letter-spacing: -0.5px;  
 }
@@ -86,12 +86,13 @@ a {
 }
 
 .card-title {
-  color: rgb(39, 39, 56);
+  /* color: rgb(108, 108, 245); */
   font-size: 1rem;
+  font-weight: 700;
 }
 
 .card-text {
-  font-weight: 400;
+  font-weight:500;
   font-size: 13px;
 }
 .card-title{
@@ -101,4 +102,23 @@ a {
 
 .icn{
   margin-top:10px;
+  padding: 6px;
+  border-radius: 1rem;;
+  box-shadow: 1px 2px 6px rgb(240, 236, 236);
+}
+
+
+.tasks{
+  color: rgb(108, 108, 245);
+}
+.future{
+  color: rgb(11, 146, 199);
+}
+.pending{
+  color: orangered;
+
+}
+.perfomance{
+  /* color: rgb(167, 185, 0); */
+  color: rgb(238, 155, 1);
 }
