--- a/src/assets/css/tasks.css
+++ b/src/assets/css/tasks.css
@@ -49,3 +49,72 @@
     color: rgb(90, 74, 236);
     font-weight:500;
 }
+
+
+
+/* Modal css area */
+.modal-header {
+    padding:2rem;
+    border-bottom:none;
+}
+.modal-title{
+    color:rgb(94, 84, 240);
+    font-weight: 700;
+    font-size:16.5px;
+    border-bottom:2px solid rgb(250, 250, 250);
+}
+.syi{
+    margin-right:1.6rem;
+}
+.modal-content{
+    border-radius:0.5rem;
+}
+.modal-body{
+    background-color:rgb(254, 254, 255);    
+    min-height: 30vh;
+    /* background-color:rgb(grey) */
+   padding-right:2.5rem;
+   padding-left: 2.5rem;
+}
+.modal-footer{
+    height:3rem;
+    border-top:none;
+}
+
+.task-form{
+    text-align:left;
+}
+
+
+.task-form input{
+    height:2.8rem;
+    width:100%;
+    border-radius:4px;
+    padding-left: 1.7rem;
+    border: solid 1px rgb(217, 215, 224);
+}
+
+#date,#name,#details{
+    font-weight:400;
+    font-size:11px;
+    color: rgb(91, 78, 204);
+}
+
+.task-form label{
+    text-align:left;
+    font-size:13px;
+    font-weight:500;
+    color: rgb(109, 114, 177);
+    margin-top:1.3rem;
+}
+.submit{
+    font-size:13px;
+    color: rgb(253, 253, 253);
+    border: solid 1px rgb(255, 255, 255);
+    background-color:rgb(109, 107, 221);
+    margin-top:2rem;
+    border-radius:20px;
+    width:7rem;
+    font-weight: 500;
+    height:2.8rem;
+}
