--- a/src/assets/css/tasks.css
+++ b/src/assets/css/tasks.css
@@ -37,22 +37,34 @@
     min-height:4rem;
     border: solid 1px rgb(231, 245, 247);
     border-radius:0.4rem;
-    padding: 1.2rem;
+    padding: 1.75rem;
     font-size:12px;
     margin-top: 0.5rem;
+    text-align:left; 
+    padding-left:1.7rem;
     /* background-color:rgb(250, 253, 255); */
     /* box-shadow: 0px 2px 4px rgb(238, 245, 245); */
 }
 
 .tsk01 h4{
-    font-size:13px;
-    color: rgb(90, 74, 236);
-    font-weight:500;
+    font-size:13.1px;
+    color: rgb(105, 93, 207);
+    font-weight:600;
 }
 
+.tsk01 h6{
+   text-transform: uppercase;
+   font-weight:500;
+   color: rgb(113, 104, 153);
+   font-size:12px;
+} 
 
+.tsk01 p{
+    color: rgb(115, 111, 124);
+    font-size:11.6px;
+}
 
-/* Modal css area */
+/* Modal css area */    
 .modal-header {
     padding:2rem;
     border-bottom:none;
@@ -117,4 +129,15 @@
     width:7rem;
     font-weight: 500;
     height:2.8rem;
+}
+
+
+.card-foot{
+    min-height:3rem;
+    background-color:rgb(250, 249, 253);
+}
+.card-foot li{
+    text-decoration: none;
+    list-style: none;
+    display: inline;
 }
