--- a/src/assets/css/tasks.css
+++ b/src/assets/css/tasks.css
@@ -48,15 +48,17 @@
 
 .tsk01 h4{
     font-size:13.1px;
-    color: rgb(105, 93, 207);
+    color: rgb(115, 102, 233);
     font-weight:600;
 }
 
 .tsk01 h6{
-   text-transform: uppercase;
+   /* text-transform: uppercase; */
    font-weight:500;
-   color: rgb(113, 104, 153);
-   font-size:12px;
+   color: rgb(107, 90, 172);
+   font-size:12.6px;
+   margin-top:0.5rem;
+   /* margin-bottom:1rem; */
 } 
 
 .tsk01 p{
@@ -85,11 +87,11 @@
     background-color:rgb(254, 254, 255);    
     min-height: 30vh;
     /* background-color:rgb(grey) */
-   padding-right:2.5rem;
+   padding-right:2.5rem;    
    padding-left: 2.5rem;
 }
 .modal-footer{
-    height:3rem;
+    min-height:2rem;
     border-top:none;
 }
 
@@ -134,10 +136,11 @@
 
 .card-foot{
     min-height:3rem;
-    background-color:rgb(250, 249, 253);
+    /* background-color:rgb(250, 249, 253); */
 }
 .card-foot li{
     text-decoration: none;
     list-style: none;
     display: inline;
+    color:rgb(111, 103, 122);
 }
