--- a/src/assets/css/tasks.css
+++ b/src/assets/css/tasks.css
@@ -35,13 +35,14 @@
 
 .tsk01{
     min-height:4rem;
-    border: solid 1px rgb(231, 245, 247);
+    border: solid 1px rgb(235, 238, 238);
     border-radius:0.4rem;
-    padding: 1.75rem;
+    /* padding: 1rem; */
     font-size:12px;
     margin-top: 0.5rem;
     text-align:left; 
     padding-left:1.7rem;
+    padding-bottom:1rem;
     /* background-color:rgb(250, 253, 255); */
     /* box-shadow: 0px 2px 4px rgb(238, 245, 245); */
 }
@@ -58,12 +59,14 @@
    color: rgb(107, 90, 172);
    font-size:12.6px;
    margin-top:0.5rem;
+
    /* margin-bottom:1rem; */
 } 
 
 .tsk01 p{
     color: rgb(115, 111, 124);
     font-size:11.6px;
+    margin-right: 15px;
 }
 
 /* Modal css area */    
@@ -132,31 +135,43 @@
     font-weight: 500;
     height:2.8rem;
 }
+.btn-group{
+    /* background-color:rgb(109, 109, 179); */
+    padding:0;
+    margin: 0;
+    border-radius: 4px;
+    border-bottom-left-radius:0.7rem;
+   /* border: solid 1px rgb(243, 241, 253); */
+}
+button{
+    outline: none;
+}
 
 
-.card-foot{
-    min-height:3rem;
+.card-head{
+    color: rgb(197, 190, 190);
+    border-radius:20px;
     text-align:right;
     /* background-color:rgb(250, 249, 253); */
 }
-.card-foot ul{
-    width:100%;
-    /* background-color:grey; */
-    padding:0.3rem;
-    text-align:center;
-    padding-left:2rem;
-    padding-top:0.8rem;
-    padding: bottom 0.8rem;
+
+.dropdown-menu{
+/* background-color:red;     */
+background-color: rgb(253, 253, 255);
+border          : solid 1px rgb(233, 232, 236);    
+padding:1rem;
 }
-.card-foot li{
-    text-decoration: none;
-    list-style: none;
-    display: inline;
-    color:rgb(156, 152, 177);
-    margin-right: 2rem;
-    /* border-bottom: solid 2px rgb(169, 178, 194); */
-    padding:3px;
-    border-radius:2rem;
- 
-    
+.done,.edit,.close{
+  margin:0.55rem;
+}
+
+.close{
+    color: rgb(197, 101, 64);
+    font-weight:500;
+}
+.edit{
+    color:rgb(76, 122, 173);
+}
+.ver{
+    color: rgb(146, 138, 156);
 }
