--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -21,10 +21,10 @@ P {
   letter-spacing: -1px;
 }
 .dti {
-  font-size: 2.5rem;
-  font-weight: 200;
+  font-size: 2.4rem;
+  font-weight: 800;
   letter-spacing: -1px;
-  color: rgb(18, 111, 134);
+  color: rgb(191, 210, 211);
 }
 
 .rder {
@@ -46,6 +46,13 @@ P {
   padding-top: 2rem;
   margin-top: 3rem;
 }
+
+.period{
+  background-color:grey;
+}
+
+
+
 .ru{
   font-weight: 500;
   color: rgb(89, 87, 110);
