--- a/src/assets/css/tasks.css
+++ b/src/assets/css/tasks.css
@@ -27,8 +27,8 @@
     text-align: center;
 }
 .tihead{
-    color: rgb(120, 107, 238);
-    font-size:1.5rem;
+    color: rgb(129, 118, 209);
+    font-size:1.36rem;
     letter-spacing: -0.5px;
     font-weight:700;    
 }
@@ -37,38 +37,52 @@
     min-height:4rem;
     border: solid 1px rgb(244, 248, 248);    
     border-radius:0.4rem;
-    /* padding: 1rem; */
+    padding: 1rem;
     font-size:12px;
     margin-top: 0.5rem;
     text-align:left; 
     padding-left:1.7rem;
     padding-bottom:1rem;
-    /* background-color:rgb(248, 249, 250); */
+    background-color:rgb(255, 255, 255);
     /* box-shadow: 0px 2px 4px rgb(238, 245, 245); */
 }
 
 .tsk01 h4{
-    font-size:14px;
+    font-size:13px;
     color: rgb(115, 102, 233);
     font-weight:600;
 }
 
 .tsk01 h6{
-   /* text-transform: uppercase; */
-   font-weight:500;
-   color: rgb(107, 90, 172);
-   font-size:13px;
+   font-weight:600;
+   color: rgb(99, 79, 180);
+   font-size:13.5px;
    margin-top:0.5rem;
 
    /* margin-bottom:1rem; */
 } 
 
 .tsk01 p{
-    color: rgb(56, 53, 63);
-    font-size:12px;
+    color: rgb(82, 78, 92);
+    font-size:11px;
     margin-right: 15px;
 }
-
+.date-d{
+    color: rgb(140, 124, 167);
+    font-weight: 500;
+    background-color: rgb(250, 248, 252);
+    padding:5px;
+    padding-left:9px;
+    padding-right:9px;
+    border-radius:4px;
+    /* border: solid 0.5px rgb(252, 249, 249); */
+}
+.alarm{
+    color: rgb(128, 97, 179);
+    margin-right:0.7rem;
+    background-color:white;
+    border-radius:1rem;
+}
 /* Modal css area */    
 .modal-header {
     padding:2rem;
