--- a/src/assets/css/tasks.css
+++ b/src/assets/css/tasks.css
@@ -101,7 +101,10 @@
     margin-right:1.6rem;
 }
 .modal-content{
-    border-radius:0.5rem;
+    /* border:none; */
+   border-radius:4px;
+   border:1px solid rgb(208, 206, 216);
+ 
 }
 .modal-body{
     background-color:rgb(254, 254, 255);    
@@ -127,6 +130,27 @@
     padding-left: 1.7rem;
     border: solid 1px rgb(217, 215, 224);
 }
+
+.task-form textarea{
+    min-height:4.4rem;
+    height:auto;
+    width:100%;
+    border-radius:4px;
+    padding-left: 1.7rem;
+    border: solid 1px rgb(217, 215, 224);
+    padding-top: 1rem;
+}
+input:focus{
+
+    outline: none;
+    border: solid 2px rgb(197, 183, 235);
+  }
+textarea:focus{
+
+    outline: none;
+    border: solid 2px rgb(190, 178, 221);
+  }
+
 
 #date,#name,#details{
     font-weight:400;
