--- a/src/assets/css/tasks.css
+++ b/src/assets/css/tasks.css
@@ -44,8 +44,7 @@
 .tsk01{
     min-height:4rem;
     border: solid 1px rgb(234, 240, 240);    
-    border-radius:0.4rem;
-    /* padding: 1rem; */
+    border-radius:5px;
     font-size:12px;
     margin-top: 0.5rem;
     text-align:left; 
@@ -99,9 +98,9 @@
     border-bottom:none;
 }
 .modal-title{
-    color:rgb(94, 84, 240);
+    color:rgb(96, 92, 160);
     font-weight: 700;
-    font-size:16.5px;
+    font-size:16px;
     border-bottom:2px solid rgb(250, 250, 250);
 }
 .syi{
