--- a/src/assets/css/tasks.css
+++ b/src/assets/css/tasks.css
@@ -22,12 +22,11 @@
 
 .btn-addtask{
     border:none;
-    border-bottom: solid 2px rgb(173, 173, 211);
     background-color:rgb(255, 255, 255);
-    /* border-radius:1.3rem; */
+    border-radius:5rem;
     padding-left: 0.5rem;
     padding-right: 0.6rem;
-    min-width:6rem;
+    padding:1rem;
     text-align: center;
 }
 .btn-edittask{
@@ -193,7 +192,7 @@ h6:first-letter {
 }
 
 .addsi{
-    color: rgb(119, 106, 165);
+    color: rgb(121, 99, 218);
     font-size:12px;
     font-weight:500;
 }
