--- a/src/assets/css/perfomance.css
+++ b/src/assets/css/perfomance.css
@@ -1,7 +1,69 @@
 .pers{
-    padding:2rem;
-    margin:2rem;
+    padding:3rem;
+    margin:1rem;
     border-radius:0.5rem;
-    border:solid 1px rgb(164, 189, 124);
+    background-color:white;
+    font-size:13px;
 }
+
+.per-stat{
+    color:rgb(98, 120, 126);
+    font-size:11px;
+}
+
+.tid-task{
+    text-align:left;
+    padding-top:2rem;
+    /* padding: 2rem;    */
+    /* padding-top:4.2rem; */
+}
+.per-tihead{
+    margin-bottom:none;
+    color: rgb(105, 156, 75);
+    font-size:1.3rem;   
+    font-weight:900;    
+}
+.per-tic{
+    color:rgb(134, 177, 105);
+    font-size:13px;
+    padding:1px;
+    border: solid 1px rgb(184, 218, 181);
+    border-radius:3px;
+    margin-left: 0.4rem;
+}
+.per-tod{
+    color: rgb(13, 146, 223);
+    font-size:10px;
+    margin-top:none;
+}
+.per-avar{
+    padding-top:1.3rem;
+    width:13rem;
+    height:5rem;
+    text-align:center;  
+    background-color:rgb(255, 255, 255);
+    border-radius:5px;
+}
+.per-des{
+    padding:3rem;
+
+}
+
+.per-des h5{
+    font-size:13px;
+    font-weight: 500;
+     color: rgb(103, 141, 67);
+     background-color:white;
+     padding:7px;
+     padding-left:11px;
+     padding-right:11px;
+     border-radius:4px;
+     width:16rem;
+     /* width:fit-content; */
+}
+.chart-con{
+    margin-top:3rem;
+}
+
+
 
