--- a/src/assets/css/tasks.css
+++ b/src/assets/css/tasks.css
@@ -164,7 +164,7 @@ li{
     background-color:rgb(253, 254, 255);
     padding-top:1.5rem;
     padding-bottom: 1.5rem;
-    padding-left: 2rem;
+    padding-left:1.6rem;
     border: solid 1px rgb(241, 237, 243);
     box-shadow: 0px 2px 7px rgb(216, 218, 240)
 }
@@ -182,16 +182,20 @@ li{
 }
 
 ul li{
-    color: rgb(96, 101, 158);
+    color: rgb(71, 76, 94);
     font-size:13px;
     font-weight:500;
     cursor:pointer;
+    border-bottom: 2px solid rgb(250, 250, 250);
 }
 
 ul li:hover{
-    transform:scale(1.03);
-    color:rgb(175, 109, 100);
+    transform:scale(1.01);
+    color:rgb(122, 87, 83);
+    border-bottom: 2px solid rgb(227, 242, 252);
   }
+  
+
 
 .edit,.dele{
   margin-left: 1rem;
@@ -202,13 +206,25 @@ ul li:hover{
 .dele{ 
     color: rgb(148, 127, 121);
     font-weight:600;
-    font-size:19px;
+    font-size:14px;
     margin-top:4px;
+    vertical-align:middle;
+}
+
+.done{
+    color:rgb(60, 146, 93);
+    font-size: 14px;    
+    margin-left: 0.4rem;
+    font-weight: 600;
+    /* line-height:40px; */
+    vertical-align:middle;
 }
 
 .edit{
-    color:rgb(36, 138, 206);
-    font-size: 17px;
+    color:rgb(59, 119, 160);
+    font-size: 14px;
+    vertical-align:middle;
+
 }
 
 .ver{
@@ -399,7 +415,7 @@ textarea:focus{
     /* background-color:rgb(109, 109, 179); */
     padding:0;
     margin: 0;
-    border-radius: 4px;
+    border-radius:10px;
     border-bottom-left-radius:0.7rem;
    /* border: solid 1px rgb(243, 241, 253); */
 }
